--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <!--On fait appel à notre/nos fichier/s pong.js-->
     </body>
 
-    <script src="js/balle.js"></script>
-    <script src="js/terrain.js"></script>
-    <script src="js/raquette.js"></script>
-    <script src="js/interval.js"></script>
+    <script src="js/Balle.js"></script>
+    <script src="js/Terrain.js"></script>
+    <script src="js/Raquette.js"></script>
+    <script src="js/Interval.js"></script>
     
 </html>
