--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         <!--On fait appel aux éléménts que l'on souhaite définir: au "terrain", à la "balle", à la "raquette"-->
         <div id="terrain">
 
+            <div id="Sgauche" class="score">0
+            </div>
+
+            <div id="Sdroite" class="score">0
+            </div>
+
             <div id="balle">
             </div>
 
@@ -26,6 +32,7 @@
 
     <script src="js/Balle.js"></script>
     <script src="js/Terrain.js"></script>
+    <script src="js/Joueur.js"></script>
     <script src="js/Raquette.js"></script>
     <script src="js/Interval.js"></script>
     
