--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
     <script src="js/Joueur.js"></script>
     <script src="js/Raquette.js"></script>
     <script src="js/Interval.js"></script>
+    <script src="js/Son.js"></script>
     
 </html>
