--- a/index.html
+++ b/index.html
@@ -4,9 +4,15 @@
         <link rel="stylesheet" href="css/pong.css">
         <!--On importe la bibliothèque jQueries-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://code.createjs.com/1.0.0/soundjs.min.js"></script>
         <title> PONG </title>
         
     </head>
+
+    <body onload="loadSound();">
+        <button onclick="playSound();" class="playSound">Play Sound</button>
+    <body>
+        
     <body>
         <!--On fait appel aux éléménts que l'on souhaite définir: au "terrain", à la "balle", à la "raquette"-->
         <div id="terrain">
